test/Transforms/PolyLowering/poly_lowering_fail_reserved_name.llzk
// RUN: llzk-opt -I %S -split-input-file -llzk-poly-lowering-pass="max-degree=2" -verify-diagnostics %s

module attributes {llzk.lang} {
  struct.def @CmpConstraint {
    // expected-error@+1 {{Member name '__llzk_poly_lowering_pass_aux_member_0' conflicts with reserved prefix '__llzk_poly_lowering_pass_aux_member_'}}
    struct.member @__llzk_poly_lowering_pass_aux_member_0 : !felt.type
    function.def @compute(%a: !felt.type, %b: !felt.type) -> !struct.type<@CmpConstraint> {
      %self = struct.new : !struct.type<@CmpConstraint>
      function.return %self : !struct.type<@CmpConstraint>
    }

    function.def @constrain(%self: !struct.type<@CmpConstraint>, %a: !felt.type, %b: !felt.type) {
      %z = felt.mul %a, %b
      %0 = felt.mul %z, %z
      %1 = felt.mul %z, %a
      %2 = felt.mul %1, %1
      constrain.eq %2, %z : !felt.type
      constrain.eq %0, %1 : !felt.type
      function.return
    }
  }
}
